emphasize primary recommendation

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,13 @@
   border-radius: 5px;
 }
 
+.primary-edu-block {
+  background-color: #3a6277;
+  display: block;
+  width: 800px !important;
+  border-radius: 5px;
+}
+
 .education-header {
   margin-top: 1em;
 }
