Add guess page (#13)
* update api url

* add base setup for guess page

* update education classes & add new api calls

* move common result page functions to own file

* add guess page callback

* add new requests for guess and educations

* add react-select

* change education request to get

* add query param to education getter

* scuffyscuff css

* remove unused packages

* implement search field

* convert results to buttons

* send id rather than education obj

* thorulf is a react god

* remove console logs

* remove unused imports

--- a/src/App.css
+++ b/src/App.css
@@ -83,3 +83,16 @@ hr {
 .title {
   text-align: center;
 }
+
+.full-width {
+  width: 100%;
+}
+
+.search-btn {
+  width: 5em;
+}
+
+.search-selector-btn {
+  background-color: #444b59 !important;
+  border: 0 !important;
+}
