--- a/src/styling/HomePage.css
+++ b/src/styling/HomePage.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #444b59;
-  min-height: calc(100vh - 58px);
+  min-height: calc(100vh);
   display: flex;
   flex-direction: column;
   align-items: center;
