--- a/src/styling/recommender.css
+++ b/src/styling/recommender.css
@@ -11,3 +11,8 @@ progress{
 progress::-webkit-progress-value{
     background-color: rgb(0, 117, 255);
 }
+
+.row {
+    padding-right: 0px;
+    margin-right: 0px;
+}
