--- a/src/styling/style.scss
+++ b/src/styling/style.scss
@@ -7,3 +7,7 @@ $theme-colors: (
 
 /* import bootstrap to set changes */
 @import "~bootstrap/scss/bootstrap";
+
+body, html, #root{
+  height: 100vh;
+}
